--- a/module_01/HW_01.md
+++ b/module_01/HW_01.md
@@ -30,7 +30,9 @@ kernelspec:
     c. What is the result of the following logical operation, `volume>1000` (in inches^3)
 
 ```{code-cell} ipython3
-
+a. 12.5x11x14 = 1925
+b. 31/1925 = 0.016
+c. false
 ```
 
 2. Use the variables given below, `str1` and `str2`, and check the following 
