--- a/module_01/HW_01.md
+++ b/module_01/HW_01.md
@@ -48,6 +48,10 @@ c. false
 ```{code-cell} ipython3
 str1 = 'Python'
 str2 = 'python'
+a. false
+b. false
+c. true
+d. One could force b to be true if string operations that look only for the string to be full of letters regardless of case or string length. This includes str.isalpha(), str.isprintable(), str.ljust(width[,fillchar]). 
 ```
 
 3. The following code has an error, fix the error so that the correct result is returned:
