--- a/module_01/HW_01.md
+++ b/module_01/HW_01.md
@@ -68,7 +68,14 @@ else:
     print('x is not less than y')
 ```
 
-```{code-cell} ipython3
+```python
+x=1
+y=20
+
+if x<y and y==20:
+    print('y is 20 and x is less than y')
+else:
+    print('x is not less than y')
 
 ```
 
