--- a/module_01/HW_01.md
+++ b/module_01/HW_01.md
@@ -119,7 +119,10 @@ of the two indices from 0 to 9 e.g. A_99[3,2]=6 and A_99[4,4]=16.
     
 
 
-```{code-cell} ipython3
+```python
+A_99[3,2]=6
+A_99[4,4]=16
+def A_99(A_99[3,2],A_99[4,4]):
 
 ```
 
