--- a/module_01/HW_01.md
+++ b/module_01/HW_01.md
@@ -120,10 +120,16 @@ of the two indices from 0 to 9 e.g. A_99[3,2]=6 and A_99[4,4]=16.
 
 
 ```python
-A_99[3,2]=6
-A_99[4,4]=16
-def A_99(A_99[3,2],A_99[4,4]):
-
+import numpy as np
+%%time
+X=np.arange(0,10)
+Y=np.arange(0,10)
+A_99=[x,y]
+for x in range(X):
+  for y in range(Y)
+  X*Y
+b=np.mean(A_99)
+c=np.std(A_99)
 ```
 
 3. Use the two arrays, X and Y, given below to create A_99 using numpy array math rather than a for-loop. 
