--- a/module_01/HW_01.md
+++ b/module_01/HW_01.md
@@ -118,16 +118,12 @@ of the two indices from 0 to 9 e.g. A_99[3,2]=6 and A_99[4,4]=16.
     c. Calculate the standard deviation of `A_99`
     
 
-
 ```python
-import numpy as np
 %%time
-X=np.arange(0,10)
-Y=np.arange(0,10)
-A_99=[x,y]
-for x in range(X):
-  for y in range(Y)
-  X*Y
+A_99=[]
+for x in range(0,10):
+  for y in range(0,10)
+  A_99[x][y]=x*y
 b=np.mean(A_99)
 c=np.std(A_99)
 ```
@@ -143,6 +139,14 @@ c=np.std(A_99)
     d. create a filled contour plot of X, Y, A_99 [contourf plot documentation](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.contourf.html)
 
 ```{code-cell} ipython3
+import numpy as np
+%%time
+X=np.arange(0,10)
+Y=np.arange(0,10)
+[x,y]=X*Y
+A_99=[x,y]
+b=np.mean(A_99)
+c=np.std(A_99)
 
 ```
 
