--- a/module_01/HW_01.md
+++ b/module_01/HW_01.md
@@ -118,7 +118,7 @@ of the two indices from 0 to 9 e.g. A_99[3,2]=6 and A_99[4,4]=16.
     c. Calculate the standard deviation of `A_99`
     
 
-```python
+```{code-cell} ipython3
 %%time
 A_99=[]
 for x in range(0,10):
