--- a/module_01/HW_01.md
+++ b/module_01/HW_01.md
@@ -119,6 +119,7 @@ of the two indices from 0 to 9 e.g. A_99[3,2]=6 and A_99[4,4]=16.
     
 
 ```{code-cell} ipython3
+import numpy as np
 %%time
 A_99=[]
 for x in range(0,10):
