--- a/module_01/HW_01.md
+++ b/module_01/HW_01.md
@@ -119,14 +119,25 @@ of the two indices from 0 to 9 e.g. A_99[3,2]=6 and A_99[4,4]=16.
     
 
 ```{code-cell} ipython3
-import numpy as np
 %%time
 A_99=[]
 for x in range(0,10):
   for y in range(0,10)
   A_99[x][y]=x*y
-b=np.mean(A_99)
-c=np.std(A_99)
+mean=0
+for x in A_99:
+  mean += x
+mean = mean/len(A_99)
+stdev=0
+num=0
+sum_num=0
+for x in A_99:
+  num=(x-mean)**2
+  sum_num += num
+ stdev=(num/len(A_99))**(1/2)
+
+  
+  
 ```
 
 3. Use the two arrays, X and Y, given below to create A_99 using numpy array math rather than a for-loop. 
@@ -141,14 +152,16 @@ c=np.std(A_99)
 
 ```{code-cell} ipython3
 import numpy as np
+import mathplotlib.pyplot as plt
 %%time
+A_99=[]
 X=np.arange(0,10)
 Y=np.arange(0,10)
-[x,y]=X*Y
-A_99=[x,y]
+A_99=X*Y
 b=np.mean(A_99)
 c=np.std(A_99)
-
+plt.rcParams.update({'font.size': 22})
+plt.rcParams['lines.linewidth'] = 3
 ```
 
 4. The following linear interpolation function has an error. It is supposed to return y(x) given the the two points $p_1=[x_1,~y_1]$ and $p_2=[x_2,~y_2]$. Currently, it just returns and error.
